2011-06-17 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Do not display standard page link with TemplaVoilà
2011-05-25 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfixes
	* Complete refactoring
	* Add a support for version lower than 4.3 (with a module instead of reports)
2011-05-10 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Now compare the local version of a file to the same TER version (before it was the last version)
	* Ignore blank spaces in diff (-b option)
2011-05-08 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Update some labels
	* Bug on a label in plugins mode
 	* Add a german version (thanks to Stefan Galinski)
2011-05-06 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* In extension list mode, add a shadowbox to the db part
	* Add a ExtDirect list module (in 4.5>= only)
2011-04-13 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * In plugins and contents list, add the possibility to show hidden pages/contents
2011-04-11 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Nice feature : in extension list mode you can view the modified files in linux like diff mode (local file/TER file)
2011-03-31 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a new module to list extension with : TER update needed? database update needed? modified files? etc...
2011-03-08 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Small bugfix for view icon on TYPO3 4.3
    * Add a filter to filter by content in the "List of used content" view
    * Bugfix : EM link was broken
2011-02-28 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfix for icons (not displayed if you have your TYPO3 installation in a subfolder).
2011-02-11 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a new view to display the available BE ajax methods
2011-02-09 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a filter to filter by plugins in the "List of used plugins" view
2011-02-05 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a typo3 page brower on the "List of used content types & "List of used plugins" view