@@ -1,3 +1,5 @@
+2011-07-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Add realurl errors log
 2011-06-17 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Do not display standard page link with TemplaVoilà
 2011-05-25 CERDAN Yohann <cerdanyohann@yahoo.fr>
